--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	
 		<!-- Home -->
 		<div data-role="page" id="page1" data-theme="a">
-			<div data-theme="a" data-role="header">
+			<div data-theme="a" data-role="header" data-position="fixed">
 				<h3>
 					ContrastRx
 				</h3>
@@ -55,6 +55,9 @@
 				<a data-role="button" data-theme='r' data-transition="slide" href="#page3">
 					Acute Reaction
 				</a>
+        <p style="text-align:center">
+          Content summarized from the ACR Manual on Contrast Media v7
+        </p>
 			</div>
 			<div data-theme="a" data-role="footer" data-position="fixed">
 				<h5>
@@ -75,7 +78,7 @@
         </a>
 			</div>
 			<div data-role="content">
-        <div data-role="collapsible-set">
+        <div data-role="collapsible-set" data-inset="false">
           <div data-role="collapsible" data-collapsed="true">
             <h3>
               Elective Protocols
@@ -108,7 +111,7 @@
 		
 		<!-- page3 -->
 		<div data-role="page" id="page3" data-theme="a">
-			<div data-theme="a" data-role="header">
+      <div data-theme="a" data-role="header" data-position="fixed">
 				<h3>
 					Acute Reaction
 				</h3>
@@ -166,7 +169,7 @@
 
     <!-- urticaria -->
 		<div data-role="page" id="urticaria" data-theme="a">
-			<div data-theme="a" data-role="header">
+			<div data-theme="a" data-role="header" data-position="fixed">
 				<h3>
 					Acute Reaction
 				</h3>
@@ -198,7 +201,7 @@
 
     <!-- larynedema -->
 		<div data-role="page" id="larynedema" data-theme="a">
-			<div data-theme="a" data-role="header">
+			<div data-theme="a" data-role="header" data-position="fixed">
 				<h3>
 					Acute Reaction
 				</h3>
@@ -221,7 +224,7 @@
 
     <!-- bronchospasm -->
 		<div data-role="page" id="bronchospasm" data-theme="a">
-			<div data-theme="a" data-role="header">
+			<div data-theme="a" data-role="header" data-position="fixed">
 				<h3>
 					Acute Reaction
 				</h3>
@@ -246,7 +249,7 @@
 
     <!-- tachy -->
 		<div data-role="page" id="tachy" data-theme="a">
-			<div data-theme="a" data-role="header">
+			<div data-theme="a" data-role="header" data-position="fixed">
 				<h3>
 					Acute Reaction
 				</h3>
@@ -272,7 +275,7 @@
 
     <!-- brady -->
 		<div data-role="page" id="brady" data-theme="a">
-			<div data-theme="a" data-role="header">
+			<div data-theme="a" data-role="header" data-position="fixed">
 				<h3>
 					Acute Reaction
 				</h3>
@@ -298,7 +301,7 @@
 
     <!-- htn -->
 		<div data-role="page" id="htn" data-theme="a">
-			<div data-theme="a" data-role="header">
+			<div data-theme="a" data-role="header" data-position="fixed">
 				<h3>
 					Acute Reaction
 				</h3>
@@ -323,7 +326,7 @@
     
     <!-- seizures -->
 		<div data-role="page" id="seizures" data-theme="a">
-			<div data-theme="a" data-role="header">
+			<div data-theme="a" data-role="header" data-position="fixed">
 				<h3>
 					Acute Reaction
 				</h3>
@@ -347,7 +350,7 @@
 
     <!-- pulmedema -->
 		<div data-role="page" id="pulmedema" data-theme="a">
-			<div data-theme="a" data-role="header">
+			<div data-theme="a" data-role="header" data-position="fixed">
 				<h3>
 					Acute Reaction
 				</h3>
