--- a/index.html
+++ b/index.html
@@ -27,13 +27,23 @@
   <!-- User-generated js -->
 
   <script type="text/javascript">
-//<![CDATA[
-      try {
+  //<![CDATA[
+  try {
       }
-      catch (error) {
-                  console.error("Your javascript has an error: " + error);
-                  }
+  catch (error) {
+    console.error("Your javascript has an error: " + error);
+    }
   //]]>
+  </script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-44061005-1', 'contrastrx.appspot.com');
+    ga('send', 'pageview');
+
   </script>
 </head>
 
