Fixes html characters (name brands) in index.html. Updates version: index.manifest

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="description" content="Contrast reactions are scary. This webapp is an ectopic brain 
-    for managing contrast reactions. Premedication regimens are also included for patients who have
-    known mild or moderate reactions and still need a contrast enhanced CT or MR study. Information
-    is summarized from the ACR contrast manual." />
+    <meta name="description" content="Contrast reactions are scary. This webapp is an ectopic brain for managing contrast reactions. Premedication regimens are also included for patients who have known mild or moderate reactions and still need a contrast enhanced CT or MR study. Information is summarized from the ACR contrast manual." />
 
     <title>ContrastRx</title>
     <!-- 960x640 startup image -->
@@ -34,13 +31,13 @@
 
     <script type="text/javascript">
       //<![CDATA[
-    try {
-    }
-catch (error) {
-  console.error("Your javascript has an error: " + error);
-}
-//]]>
-</script>
+      try {
+      }
+      catch (error) {
+        console.error("Your javascript has an error: " + error);
+      }
+      //]]>
+    </script>
 <!-- Google Analytics code -->
 <script type="text/javascript">
 
@@ -67,22 +64,25 @@ catch (error) {
 
 
     <div data-role="content">
-      <a data-role="button" data-theme='g' data-transition="slide" href=
-        "#page2">Premedication Strategy</a> <img src="apple-touch-icon-144x144.png" style=
+      <a data-role="button" data-theme='g' data-transition="slide" href= "#page2">Premedication Strategy</a> <img src="apple-touch-icon-144x144.png" style=
       "margin: 0 auto; display: block;" /> <a data-role="button" data-theme='r'
         data-transition="slide" href="#page3">Acute Reaction</a>
 
-      <p style="text-align:center"><small>Content summarized from the ACR Manual on
-        Contrast Media v7</small></p>
+      <p style="text-align:center">
+      <small>Content summarized from the ACR Manual on Contrast Media v7</small>
+      </p>
 
-      <p style="text-align:center"><small><a href="#disclaimer">Medical
-          Disclaimer</a></small></p>
+      <p style="text-align:center">
+      <small><a href="#disclaimer">Medical Disclaimer</a></small>
+      </p>
     </div>
 
     <div data-theme="a" data-role="footer" data-position="fixed">
-      <h5>dsk 2013</h5>
+      <h5>dsk 2014</h5>
     </div>
-  </div><!-- page2 -->
+  </div>
+  
+  <!-- page2 -->
 
   <div data-role="page" id="page2" data-theme="a">
     <div data-theme="a" data-role="header" data-position="fixed">
@@ -122,7 +122,9 @@ catch (error) {
         </div>
       </div>
     </div>
-  </div><!-- page3 -->
+  </div>
+  
+  <!-- page3 -->
 
   <div data-role="page" id="page3" data-theme="a">
     <div data-theme="a" data-role="header" data-position="fixed">
@@ -150,7 +152,9 @@ catch (error) {
         <li><a href="#pulmedema" data-transition="slide">Pulmonary Edema</a></li>
       </ul>
     </div>
-  </div><!-- urticaria -->
+  </div>
+  
+  <!-- urticaria -->
 
   <div data-role="page" id="urticaria" data-theme="a">
     <div data-theme="a" data-role="header" data-position="fixed">
@@ -167,7 +171,7 @@ catch (error) {
 
         <li>2. No treatment needed in most cases</li>
 
-        <li>3. Give H1-receptor blocker: diphenhydramine (Benadryl&#194;&#174;) PO/IM/IV
+        <li>3. Give H1-receptor blocker: diphenhydramine (Benadryl &#174;) PO/IM/IV
         25 to 50 mg.</li>
 
         <li>If severe or widely disseminated: give alpha agonist (arteriolar and venous
@@ -219,8 +223,8 @@ catch (error) {
         pressure.</li>
 
         <li>2. Give beta-agonist inhalers (bronchiolar dilators, such as metaproterenol
-        [Alupent&#194;&#174;], terbutaline [Brethaire&#194;&#174;], or albuterol
-        [Proventil&#194;&#174; or Ventolin&#194;&#174;]) 2 to 3 puffs; repeat as
+        [Alupent &#174;], terbutaline [Brethaire &#174;], or albuterol
+        [Proventil &#174; or Ventolin &#174;]) 2 to 3 puffs; repeat as
         necessary. If unresponsive to inhalers, use SC, IM, or IV epinephrine.</li>
 
         <li>3. Give epinephrine SC or IM (1:1,000) 0.1 to 0.3 ml (=0.1 to 0.3 mg) or,
@@ -342,11 +346,11 @@ catch (error) {
 
         <li>1. Give O2 6 to 10 liters/min (via mask).</li>
 
-        <li>2. Consider diazepam (Valium&#194;&#174;) 5 mg IV (or more, as appropriate)
-        or midazolam (Versed&#194;&#174;) 0.5 to 1 mg IV.</li>
+        <li>2. Consider diazepam (Valium &#174;) 5 mg IV (or more, as appropriate)
+        or midazolam (Versed &#174;) 0.5 to 1 mg IV.</li>
 
         <li>3. If longer effect needed, obtain consultation; consider phenytoin
-        (Dilantin&#194;&#174;) infusion - 15 to 18 mg/kg at 50 mg/min.</li>
+        (Dilantin &#174;) infusion - 15 to 18 mg/kg at 50 mg/min.</li>
 
         <li>4. Careful monitoring of vital signs required, particularly of pO2 because of
         risk to respiratory depression with benzodiazepine administration.</li>
@@ -372,7 +376,7 @@ catch (error) {
 
         <li>2. Elevate torso.</li>
 
-        <li>3. Give diuretics: furosemide (Lasix&#194;&#174;) 20 to 40 mg IV, slow
+        <li>3. Give diuretics: furosemide (Lasix &#174;) 20 to 40 mg IV, slow
         push.</li>
 
         <li>4. Consider giving morphine (1 to 3 mg IV).</li>
