Made transparent-icon.png on main page

--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
 
 
     <div data-role="content">
-      <a data-role="button" data-theme='g' data-transition="slide" href= "#page2">Premedication Strategy</a> <img src="apple-touch-icon-144x144.png" style=
-      "margin: 0 auto; display: block;" /> <a data-role="button" data-theme='r'
+      <a data-role="button" data-theme='g' data-transition="slide" href= "#page2">Premedication Strategy</a> 
+      <img src="transparent-icon.png" style="margin: 0 auto; display: block;" /> 
+      <a data-role="button" data-theme='r'
         data-transition="slide" href="#page3">Acute Reaction</a>
 
       <p style="text-align:center">
