--- a/index.html
+++ b/index.html
@@ -165,16 +165,20 @@
       <ol data-role="listview">
         <li data-role="list-divider" role="heading">Diffuse Erythema</li>
 
-        <li>Discontinue injection if not completed</li>
+        <li>Preserve IV access; Monitor vitals; Pulse oximeter; 6-10 L/min O2 by mask</li>
 
-        <li>No treatment needed in most cases</li>
+        <li>No treatment needed if normotensive</li>
 
-        <li>Give H1-receptor blocker: diphenhydramine (Benadryl &#174;) PO/IM/IV
-        25 to 50 mg.</li>
+        <li data-role="list-divider" role="heading">If hypotensive:</li>
 
-        <li>If severe or widely disseminated: give alpha agonist (arteriolar and venous
-        constriction): epinephrine SC (1:1,000) 0.1 to 0.3 ml (=0.1 to 0.3 mg) (if no
-        cardiac contraindications).</li>
+        <li>Normal saline or Lactated Ringers rapid infusion (1,000 mL)</li>
+
+        <li>Consider epinephrine (IV) 1-3 ml of 1:10,000 slowly (=0.1-0.3 mg). Can repeat every 5-10 min up to 10 mL total</li> 
+
+        <li>If no IV access, consider epinephrine (IM) 0.3 mg 1:1,000. Can repeat up to 1 mg total (IM EpiPen&#174; or equivalent up to 3 times)</li>
+
+        <li>Consider calling emergency response team or 911</li>
+
       </ol>
     </div>
   </div>
