--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <li><a href="#hives" data-transition="slide">Hives</a></li>
         <li><a href="#erythema" data-transition="slide">Diffuse Erythema</a></li>
         <li><a href="#bronchospasm" data-transition="slide">Bronchospasm</a></li>
-        <li><a href="#larynedema" data-transition="slide">Facial/Laryngeal Edema</a></li>
+        <li><a href="#larynedema" data-transition="slide">Laryngeal Edema</a></li>
         <li><a href="#brady" data-transition="slide">Hypotension w Bradycardia</a></li>
         <li><a href="#tachy" data-transition="slide">Hypotension w Tachycardia</a></li>
         <li><a href="#htn" data-transition="slide">Hypertensive Crisis</a></li>
@@ -194,18 +194,16 @@
 
     <div data-role="content">
       <ol data-role="listview">
-        <li data-role="list-divider" role="heading">Facial or Laryngeal Edema</li>
+        <li data-role="list-divider" role="heading">Laryngeal Edema</li>
 
-        <li>Give O2 6 to 10 liters/min (via mask).</li>
+        <li>Preserve IV access; Monitor vitals; Pulse oximeter; 6-10 L/min O2 by mask</li>
 
-        <li>Give alpha agonist (arteriolar and venous constriction): epinephrine SC or
-        IM (1:1,000) 0.1 to 0.3 ml (=0.1 to 0.3 mg) or, especially if hypotension
-        evident, epinephrine (1:10,000) slowly IV 1 to 3 ml (=0.1 to 0.3 mg).</li>
+        <li>Epinephrine (IV) 1-3 ml of 1:10,000 slowly (=0.1-0.3 mg). Can repeat every 5-10 min up to 10 mL total</li> 
+        
+        <li>OR Epinephrine (IM) 0.3 mg 1:1,000. Can repeat up to 1 mg total (IM EpiPen&#174; or equivalent up to 3 times)</li>
+        
+        <li>Consider calling emergency response team or 911 based upon completeness of response</li>
 
-        <li>Repeat as needed up to a maximum of 1 mg.</li>
-
-        <li>If not responsive to therapy or if there is obvious acute laryngeal edema,
-        seek appropriate assistance (e.g., cardiopulmonary arrest response team).</li>
       </ol>
     </div>
   </div>
