Updated Hypotension with Bradycardia section

--- a/index.html
+++ b/index.html
@@ -291,27 +291,22 @@
 
     <div data-role="content">
       <ol data-role="listview">
-        <li data-role="list-divider" role="heading">Hypotension with Bradycardia (Vagal
+        <li data-role="list-divider" role="heading">Hypotension with Bradycardia (Vasovagal
         Reaction)</li>
 
-        <li>Secure airway: give O2 6 to 10 liters/min (via mask)</li>
+        <li>Preserve IV access; Monitor vitals; Pulse oximeter; 6-10 L/min O2 by mask</li>
 
-        <li>Monitor vital signs.</li>
+        <li>Elevate legs at least 60 degrees</li>
 
-        <li>Legs elevated 60 degrees or more (preferred) or Trendelenburg
-        position.</li>
+        <li>Consider Normal saline or Lactated Ringers rapid infusion (1,000 mL)</li>
 
-        <li>Secure IV access: rapid administration of Ringer's lactate or normal
-        saline.</li>
+        <li data-role="list-divider" role="heading">If mild, no other treatment necessary</li>
 
-        <li>Give atropine 0.6 to 1 mg IV slowly if patient does not respond quickly to
-        steps 2 to 4.</li>
+        <li data-role="list-divider" role="heading">If severe (remains symptomatic)</li>
 
-        <li>Repeat atropine up to a total dose of 0.04 mg/kg (2 to 3 mg) in
-        adult.</li>
+        <li>Atropine (IV) 0.6 to 1 mg IV slowly followed by saline flush; can repeat up to 3 mg total</li>
 
-        <li>Ensure complete resolution of hypotension and bradycardia prior to
-        discharge.</li>
+        <li>Consider calling emergency response team or 911</li>
       </ol>
     </div>
   </div>
