Updated Hypertensive Crisis section

--- a/index.html
+++ b/index.html
@@ -320,22 +320,21 @@
 
     <div data-role="content">
       <ol data-role="listview">
-        <li data-role="list-divider" role="heading">Hypertension, Severe</li>
+        <li data-role="list-divider" role="heading">Hypertensive Crisis (DBP &gt; 120, SBP &gt; 200)</li>
+        <li data-role="list-divider" role="heading">(symptoms of end organ compromise)</li>
 
-        <li>Give O2 6 to 10 liters/min (via mask).</li>
+        <li>Preserve IV access; Monitor vitals; Pulse oximeter; 6-10 L/min O2 by mask</li>
 
-        <li>Monitor electrocardiogram, pulse oximeter, blood pressure.</li>
+        <li>Labetalol 20 mg IV slowly over 2 minutes (can double the dose every 10 minutes)</li>
+        
+        <li data-role="list-divider" role="heading">if labetalol unavailable</li>
 
-        <li>Give nitroglycerine 0.4 mg tablet, sublingual (may repeat &#206;&#167; 3);
-        or, topical 2% ointment, apply 1 inch strip.</li>
+        <li>Nitroglycerine 0.4 mg tablet, sublingual (can repeat every 5 minutes)</li>
 
-        <li>If no response, consider labetalol 20 mg IV, then 20 to 80 mg IV every 10
-        minutes up to 300 mg.</li>
+        <li>AND Furosemide (Lasix&#174;) 20-40 mg IV over 2 minutes</li>
+        
+        <li>Call emergency response team or 911</li>
 
-        <li>Transfer to intensive care unit or emergency department.</li>
-
-        <li>For pheochromocytoma: phentolamine 5 mg IV. (may use labetalol if
-        phentolamine is not available)</li>
       </ol>
     </div>
   </div>
