Updated Pulmonary Edema section

--- a/index.html
+++ b/index.html
@@ -382,16 +382,15 @@
       <ol data-role="listview">
         <li data-role="list-divider" role="heading">Pulmonary Edema</li>
 
-        <li>Give O2 6 to 10 liters/min (via mask).</li>
+        <li>Preserve IV access; Monitor vitals; Pulse oximeter; 6-10 L/min O2 by mask</li>
 
-        <li>Elevate torso.</li>
+        <li>Elevate head of bed, if possible</li>
 
-        <li>Give diuretics: furosemide (Lasix &#174;) 20 to 40 mg IV, slow
-        push.</li>
+        <li>Furosemide (Lasix &#174;) 20-40 mg IV, slow push</li>
 
-        <li>Consider giving morphine (1 to 3 mg IV).</li>
+        <li>Morphine 1-3 mg IV (repeat every 5-10 min as needed)</li>
 
-        <li>Transfer to intensive care unit or emergency department.</li>
+        <li>Call emergency response team or 911</li>
       </ol>
     </div>
   </div>
