Updated Seizures or Convulsions section

--- a/index.html
+++ b/index.html
@@ -352,19 +352,20 @@
       <ol data-role="listview">
         <li data-role="list-divider" role="heading">Seizures or Convulsions</li>
 
-        <li>Give O2 6 to 10 liters/min (via mask).</li>
+        <li>Observe and protect the patient</li>
 
-        <li>Consider diazepam (Valium &#174;) 5 mg IV (or more, as appropriate)
-        or midazolam (Versed &#174;) 0.5 to 1 mg IV.</li>
+        <li>Turn patient on side to avoid aspiration</li>
 
-        <li>If longer effect needed, obtain consultation; consider phenytoin
-        (Dilantin &#174;) infusion - 15 to 18 mg/kg at 50 mg/min.</li>
+        <li>Suction airway as needed</li>
 
-        <li>Careful monitoring of vital signs required, particularly of pO2 because of
-        risk to respiratory depression with benzodiazepine administration.</li>
+        <li>Preserve IV access; Monitor vitals; Pulse oximeter; 6-10 L/min O2 by mask</li>
 
-        <li>Consider using cardiopulmonary arrest response team for intubation if
-        needed.</li>
+        <li data-role="list-divider" role="heading">If unremitting</li>
+
+        <li>Call emergency response team or 911</li>
+
+        <li>Lorazepam 2-4 mg IV (administer slowly, maximum dose 4 mg)</li>
+
       </ol>
     </div>
   </div>
