Updated Hypoglycemia section

--- a/index.html
+++ b/index.html
@@ -406,12 +406,25 @@
     </div>
 
     <div data-role="content">
-      <ol data-role="listview">
+      <ul data-role="listview">
         <li data-role="list-divider" role="heading">Hypoglycemia</li>
         
-        <li></li>
+        <li>Preserve IV access; 6-10 L/min O2 by mask</li>
       
-      </ol>
+        <li data-role="list-divider" role="heading">If patient is able to swallow safely</li>
+
+        <li>2 sugar packets OR 15 g glucose tablet OR 4 oz. fruit juice</li>
+
+        <li data-role="list-divider" role="heading">If patient is unable to swallow safely and IV access is available</li>
+
+        <li>1 ampule (25 g) Dextrose 50% soulution IV over 2 min</li>
+
+        <li>D5W or D5NS 100 mL/hr (as adjunct therapy)</li>
+
+        <li data-role="list-divider" role="heading">If no IV access is available</li>
+
+        <li>Glucagon 1 mg IM</li>
+      </ul>
     </div>
   </div>
 
