Updated Anxiety/Panic Attack section

--- a/index.html
+++ b/index.html
@@ -470,8 +470,15 @@
       <ol data-role="listview">
         <li data-role="list-divider" role="heading">Anxiety (Panic Attack)</li>
         
-        <li></li>
-      
+        <li>Diagnosis of exclusion</li>
+
+        <li>Assess patient for signs/symptoms of developing reaction</li>
+
+        <li>Preserve IV access; Monitor vitals; Pulse oximeter</li>
+
+        <li>If no identifiable manifestations and normal oxygenation, consider this diagnosis</li>
+
+        <li>Reassure the patient</li>
       </ol>
     </div>
   </div>
