Fixed header in Hypertensive Crisis

--- a/index.html
+++ b/index.html
@@ -320,8 +320,7 @@
 
     <div data-role="content">
       <ol data-role="listview">
-        <li data-role="list-divider" role="heading">Hypertensive Crisis (DBP &gt; 120, SBP &gt; 200)</li>
-        <li data-role="list-divider" role="heading">(symptoms of end organ compromise)</li>
+        <li data-role="list-divider" role="heading">Hypertensive Crisis (DBP &gt; 120, SBP &gt; 200 and symptoms of end organ compromise)</li>
 
         <li>Preserve IV access; Monitor vitals; Pulse oximeter; 6-10 L/min O2 by mask</li>
 
