Updated emergency premedication protocol

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         data-transition="slide" href="#acute">Acute Reaction</a>
 
       <p style="text-align:center">
+      <small>* * * UPDATED 5/2014 * * *</small><br/>
       <small>Content summarized from the ACR Manual on Contrast Media v9 (2013)</small>
       </p>
 
@@ -119,7 +120,12 @@
             <li>Decadron 7.5mg or Betamethasone 6mg IV q4h until exam in patient with
             known allergy to medrol, aspirin, NSAIDS, especially if asthmatic.<br />
             Also Benadryl 50mg IV 1h before exam.</li>
+
+            <li>Omit steroids entirely and give Benadryl 50 mg IV</li>
           </ul>
+        </div>
+        <div>
+        <br/>NOTE: IV steroids have not been shown to be effective when given less than 4-6 hours prior to contrast injection
         </div>
       </div>
     </div>
