--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
     apple-touch-icon-precomposed.png
     apple-touch-icon.png
     -->
-    <link rel="stylesheet" href="jquery.mobile-1.3.0.min.css" type="text/css" />
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+
     <link rel="stylesheet" href="my.css" type="text/css" />
-    <script src="http://code.jquery.com/jquery-1.7.2.min.js" type="text/javascript">
-    </script>
-    <script src="jquery.mobile-1.3.0.min.js" type="text/javascript">
-    </script>
-    <script src="my.js" type="text/javascript">
-    </script><!-- User-generated css -->
+    <script src="my.js" type="text/javascript"> </script>
+    <!-- User-generated css -->
     <!-- User-generated js -->
 
     <script type="text/javascript">
@@ -57,16 +56,16 @@
 <body>
   <!-- Home -->
 
-  <div data-role="page" id="main" data-theme="a">
-    <div data-theme="a" data-role="header" data-position="fixed">
+  <div data-role="page" id="main" data-theme="b">
+    <div data-theme="b" data-role="header" data-position="fixed">
       <h3>ContrastRx</h3>
     </div>
 
 
     <div data-role="content">
-      <a data-role="button" data-theme='g' data-transition="slide" href= "#premed">Premedication Strategy</a> 
+      <a data-role="button" data-theme='d' data-transition="slide" href= "#premed">Premedication Strategy</a> 
       <img src="transparent-icon.png" style="margin: 0 auto; display: block;" /> 
-      <a data-role="button" data-theme='r'
+      <a data-role="button" data-theme='c'
         data-transition="slide" href="#acute">Acute Reaction</a>
 
       <p style="text-align:center">
@@ -79,15 +78,15 @@
       </p>
     </div>
 
-    <div data-theme="a" data-role="footer" data-position="fixed">
+    <div data-theme="b" data-role="footer" data-position="fixed">
       <h5>dsk 2014</h5>
     </div>
   </div>
   
   <!-- premed -->
 
-  <div data-role="page" id="premed" data-theme="a">
-    <div data-theme="a" data-role="header" data-position="fixed">
+  <div data-role="page" id="premed" data-theme="b">
+    <div data-theme="b" data-role="header" data-position="fixed">
       <h3>Premedication</h3><a data-role="button" data-direction="reverse"
         data-transition="slide" href="#main" data-icon="back" data-iconpos="left" class=
         "ui-btn-left">Back</a>
@@ -133,8 +132,8 @@
   
   <!-- acute -->
 
-  <div data-role="page" id="acute" data-theme="a">
-    <div data-theme="a" data-role="header" data-position="fixed">
+  <div data-role="page" id="acute" data-theme="b">
+    <div data-theme="b" data-role="header" data-position="fixed">
       <h3>Acute Reaction</h3><a data-role="button" data-direction="reverse"
         data-transition="slide" href="#main" data-icon="back" data-iconpos="left" class=
         "ui-btn-left">Back</a>
@@ -160,8 +159,8 @@
   
   <!-- erythema -->
 
-  <div data-role="page" id="erythema" data-theme="a">
-    <div data-theme="a" data-role="header" data-position="fixed">
+  <div data-role="page" id="erythema" data-theme="b">
+    <div data-theme="b" data-role="header" data-position="fixed">
       <h3>Acute Reaction</h3><a data-role="button" data-direction="reverse"
         data-transition="slide" href="#acute" data-icon="back" data-iconpos="left" class=
         "ui-btn-left">Back</a>
@@ -191,8 +190,8 @@
   
   <!-- larynedema -->
 
-  <div data-role="page" id="larynedema" data-theme="a">
-    <div data-theme="a" data-role="header" data-position="fixed">
+  <div data-role="page" id="larynedema" data-theme="b">
+    <div data-theme="b" data-role="header" data-position="fixed">
       <h3>Acute Reaction</h3><a data-role="button" data-direction="reverse"
         data-transition="slide" href="#acute" data-icon="back" data-iconpos="left" class=
         "ui-btn-left">Back</a>
@@ -216,8 +215,8 @@
   
   <!-- bronchospasm -->
 
-  <div data-role="page" id="bronchospasm" data-theme="a">
-    <div data-theme="a" data-role="header" data-position="fixed">
+  <div data-role="page" id="bronchospasm" data-theme="b">
+    <div data-theme="b" data-role="header" data-position="fixed">
       <h3>Acute Reaction</h3><a data-role="button" data-direction="reverse"
         data-transition="slide" href="#acute" data-icon="back" data-iconpos="left" class=
         "ui-btn-left">Back</a>
@@ -255,8 +254,8 @@
   
   <!-- tachy -->
 
-  <div data-role="page" id="tachy" data-theme="a">
-    <div data-theme="a" data-role="header" data-position="fixed">
+  <div data-role="page" id="tachy" data-theme="b">
+    <div data-theme="b" data-role="header" data-position="fixed">
       <h3>Acute Reaction</h3><a data-role="button" data-direction="reverse"
         data-transition="slide" href="#acute" data-icon="back" data-iconpos="left" class=
         "ui-btn-left">Back</a>
@@ -286,8 +285,8 @@
   
   <!-- brady -->
 
-  <div data-role="page" id="brady" data-theme="a">
-    <div data-theme="a" data-role="header" data-position="fixed">
+  <div data-role="page" id="brady" data-theme="b">
+    <div data-theme="b" data-role="header" data-position="fixed">
       <h3>Acute Reaction</h3><a data-role="button" data-direction="reverse"
         data-transition="slide" href="#acute" data-icon="back" data-iconpos="left" class=
         "ui-btn-left">Back</a>
@@ -317,8 +316,8 @@
   
   <!-- htn -->
 
-  <div data-role="page" id="htn" data-theme="a">
-    <div data-theme="a" data-role="header" data-position="fixed">
+  <div data-role="page" id="htn" data-theme="b">
+    <div data-theme="b" data-role="header" data-position="fixed">
       <h3>Acute Reaction</h3><a data-role="button" data-direction="reverse"
         data-transition="slide" href="#acute" data-icon="back" data-iconpos="left" class=
         "ui-btn-left">Back</a>
@@ -346,8 +345,8 @@
   
   <!-- seizures -->
 
-  <div data-role="page" id="seizures" data-theme="a">
-    <div data-theme="a" data-role="header" data-position="fixed">
+  <div data-role="page" id="seizures" data-theme="b">
+    <div data-theme="b" data-role="header" data-position="fixed">
       <h3>Acute Reaction</h3><a data-role="button" data-direction="reverse"
         data-transition="slide" href="#acute" data-icon="back" data-iconpos="left" class=
         "ui-btn-left">Back</a>
@@ -377,8 +376,8 @@
   
   <!-- pulmedema -->
 
-  <div data-role="page" id="pulmedema" data-theme="a">
-    <div data-theme="a" data-role="header" data-position="fixed">
+  <div data-role="page" id="pulmedema" data-theme="b">
+    <div data-theme="b" data-role="header" data-position="fixed">
       <h3>Acute Reaction</h3><a data-role="button" data-direction="reverse"
         data-transition="slide" href="#acute" data-icon="back" data-iconpos="left" class=
         "ui-btn-left">Back</a>
@@ -403,8 +402,8 @@
 
   <!-- hypoglycemia -->
 
-  <div data-role="page" id="hypoglycemia" data-theme="a">
-    <div data-theme="a" data-role="header" data-position="fixed">
+  <div data-role="page" id="hypoglycemia" data-theme="b">
+    <div data-theme="b" data-role="header" data-position="fixed">
       <h3>Acute Reaction</h3><a data-role="button" data-direction="reverse"
         data-transition="slide" href="#acute" data-icon="back" data-iconpos="left" class=
         "ui-btn-left">Back</a>
@@ -435,8 +434,8 @@
 
   <!-- unresponsive -->
 
-  <div data-role="page" id="unresponsive" data-theme="a">
-    <div data-theme="a" data-role="header" data-position="fixed">
+  <div data-role="page" id="unresponsive" data-theme="b">
+    <div data-theme="b" data-role="header" data-position="fixed">
       <h3>Acute Reaction</h3><a data-role="button" data-direction="reverse"
         data-transition="slide" href="#acute" data-icon="back" data-iconpos="left" class=
         "ui-btn-left">Back</a>
@@ -464,8 +463,8 @@
 
   <!-- anxiety -->
 
-  <div data-role="page" id="anxiety" data-theme="a">
-    <div data-theme="a" data-role="header" data-position="fixed">
+  <div data-role="page" id="anxiety" data-theme="b">
+    <div data-theme="b" data-role="header" data-position="fixed">
       <h3>Acute Reaction</h3><a data-role="button" data-direction="reverse"
         data-transition="slide" href="#acute" data-icon="back" data-iconpos="left" class=
         "ui-btn-left">Back</a>
@@ -490,8 +489,8 @@
 
   <!-- hives -->
 
-  <div data-role="page" id="hives" data-theme="a">
-    <div data-theme="a" data-role="header" data-position="fixed">
+  <div data-role="page" id="hives" data-theme="b">
+    <div data-theme="b" data-role="header" data-position="fixed">
       <h3>Acute Reaction</h3><a data-role="button" data-direction="reverse"
         data-transition="slide" href="#acute" data-icon="back" data-iconpos="left" class=
         "ui-btn-left">Back</a>
@@ -529,8 +528,8 @@
   
   <!--disclaimer-->
 
-  <div data-role="page" id="disclaimer" data-theme="a">
-    <div data-theme="a" data-role="header" data-position="fixed">
+  <div data-role="page" id="disclaimer" data-theme="b">
+    <div data-theme="b" data-role="header" data-position="fixed">
       <h3>Medical Disclaimer</h3><a data-role="button" data-direction="reverse"
         data-transition="slide" href="#main" data-icon="back" data-iconpos="left" class=
         "ui-btn-left">Back</a>
