Adds manifest.json for Android web-app compatibility

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="description" content="Contrast reactions are scary. This webapp is an ectopic brain for managing contrast reactions. Premedication regimens are also included for patients who have known mild or moderate reactions and still need a contrast enhanced CT or MR study. Information is summarized from the ACR contrast manual." />
-
+    <link rel="manifest" href="manifest.json">
     <title>ContrastRx</title>
     <!-- 960x640 startup image -->
     <link rel="apple-touch-startup-image" href="startup.png" />
